--- a/style.css
+++ b/style.css
@@ -1,24 +1,23 @@
 body {
-  display: flex;
-  width: 100%;
-  height: 100%;
   margin: 0;
   padding: 0;
 }
 a {
+  display: flex;
   width: 100vw;
   height: 100vh;
   font-size: 20px;
   background: oklch(0% 0 0);
-  display: grid;
-  place-items: center;
+}
+video {
+  margin: auto;
   animation: onLoad 500ms ease forwards;
 }
 @keyframes onLoad {
   from {
-    background-size: 10%;
+    transform: scale(0.1);
   }
   to {
-    background-size: 30%;
+    transform: scale(1);
   }
 }
