--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@ a {
   display: flex;
   width: 100vw;
   height: 100vh;
-  font-size: 20px;
   background: oklch(0% 0 0);
 }
 video {
+  width: 100%;
   margin: auto;
   animation: onLoad 500ms ease forwards;
 }
